<?xml version= "1.0" encoding= "utf-8"?>
<resources>


    <!--START -->
    <string name="app_name">Golf App</string>


    <!--HOMESCREEN-->
    <string name="hm_events_btn">Events</string>
    <string name="hm_courses_btn">Courses</string>
    <string name="hm_rest_btn">Restaurants</string>
    <string name="hm_htls_btn">Hotels</string>
    <string name="hm_news_btn">News</string>
    <string name="hm_pros_btn">Pros</string>
    <string name="hm_proshp_btn">Proshop</string>
    <string name="hm_contact_btn">Contact</string>
    <string name="hm_tee_time_btn">Tee Time</string>


    <!-- Events -->
    <string name="evt_list_view_nav_bar">Events</string>
    <string name="evt_detail_page_nav_bar">Events</string>
    <string name="evt_pastevent_btn">Past Events</string>
    <string name="evt_upcoming_event_btn">Upcoming</string>
    <string name="evt_book_share_title">Book &amp; Share</string>
    <string name="evt_phone_btn">Phone</string>
    <string name="evt_addtodiary_btn">Add to calendar</string>
    <string name="evt_no_up_coming">No upcoming events</string>
    <string name="evt_no_past_evt">No past events</string>
    <string name="events_program_btn">Event Program</string>
    <string name="events_tee_times_btn">Tee Times</string>
    <string name="events_share_btn">Share </string>
    <string name="events_email_btn">Email</string>


    <!-- Pros -->
    <string name="pro_contact_pop_up_title">Contact</string>
    <string name="pro_list_nav_bar">Pros</string>
    <string name="pro_detail_nav_bar">Pro</string>
    <string name="pro_rate_offer_nav_bar">Rates &amp; Offers</string>
    <string name="pro_rate_offer_btn">Rates &amp; Offers</string>
    <string name="pro_contact_btn">Contact </string>
    <string name="pro_phone_btn">Phone</string>
    <string name="pro_email_btn">Email</string>
    <string name="pro_share_btn">Share </string>
    <string name="pro_cancel_btn">Cancel</string>


    <string name="ps_contact_pop_up_title">Contact</string>
    <string name="ps_list_nav_bar">Proshops</string>
    <string name="ps_detail_nav_bar">Proshop</string>
    <string name="ps_special_offer_nav_bar">Offers</string>
    <string name="ps_special_offer_btn">Offers</string>
    <string name="ps_contact_btn">Contact </string>
    <string name="ps_phone_btn">Phone</string>
    <string name="ps_email_btn">Email</string>
    <string name="ps_share_btn">Share </string>
    <string name="ps_cancel_btn">Cancel</string>


    <!-- The Courses -->
    <string name="crs_the_course_list_nav_bar">The Courses</string>
    <string name="crs_the_course_detail_nav_bar">The Course</string>
    <string name="crs_rate_details_nav_bar">Rates</string>
    <string name="crs_facilities_details_nav_bar">Facilities</string>
    <string name="crs_the_course_btn_detail_nav_bar">The Course</string>
    <string name="crs_the_course_btn">The Course</string>
    <string name="crs_facilities_btn">Facilities</string>
    <string name="crs_rates_btn">Rates</string>
    <string name="crs_shower_icon">Locker</string>
    <string name="crs_club_house_icon">Club house</string>
    <string name="crs_club_hire_icon">Club hire</string>
    <string name="crs_proshop_icon">Proshop</string>
    <string name="crs_pros_icon">Pros</string>
    <string name="crs_buggy_icon">Buggy</string>
    <string name="crs_practice_icon">Practice</string>
    <string name="crs_putting_icon">Putting</string>
    <string name="crs_pitching_icon">Pitching</string>
    <string name="crs_restaurant_icon">Restaurant</string>
    <string name="crs_hotel_icon">Hotel</string>
    <string name="crs_pool_icon">Pool</string>
    <string name="crs_tennis_icon">Tennis</string>
    <string name="crs_wifi_icon">Wifi</string>
    <string name="crs_parking_icon">Parking</string>
    <string name="holes">-hole</string>


    <!-- Restaurants -->
    <string name="res_contact_pop_up_title">Contact</string>
    <string name="re_list_nav_bar">Restaurants</string>
    <string name="re_detail_nav_bar">Restaurant</string>
    <string name="re_suggestion_nav_bar">Suggestions</string>
    <string name="re_menu_nav_bar">Menu</string>
    <string name="re_contact_btn">Contact</string>
    <string name="re_suggestion_btn">Suggestions</string>
    <string name="re_menu_btn">Menu</string>
    <string name="re_phone_btn">Phone</string>
    <string name="re_direction_btn">Direction</string>
    <string name="re_cancel_btn">Cancel</string>
    <string name="re_share_btn">Share </string>
    <string name="re_email_btn">Email</string>


    <!-- Hotels -->
    <string name="htl_contact_pop_up_title">Contact</string>
    <string name="htl_list_nav_bar">Hotels</string>
    <string name="htl_detail_nav_bar">Hotel</string>
    <string name="htl_package_list_nav_bar">Packages</string>
    <string name="htl_website_btn">Website</string>
    <string name="htl_package_btn">Packages</string>
    <string name="htl_phone_btn">Phone</string>
    <string name="htl_direction_btn">Direction</string>
    <string name="htl_cancel_btn">Cancel</string>
    <string name="htl_share_btn">Share </string>
    <string name="htl_email_btn">Email</string>


    <string name="nws_nav_bar">News</string>
    <string name="nws_detail_nav_bar">News</string>
    <string name="nws_share_btn">Share </string>


    <string name="cnt_contact_pop_up_title">Contact</string>
    <string name="cnt_phone_btn">Phone</string>
    <string name="cnt_email_btn">Email</string>
    <string name="cnt_direction_btn">Direction</string>
    <string name="cnt_cancel_btn">Cancel</string>


    <string name="tt_book_tee_pop_up_title">Book Tee Time</string>
    <string name="tt_phone_btn">Phone</string>
    <string name="tt_cancel_btn">Cancel</string>
    <string name="email_button_btn">Email</string>


    <!-- not available -->
    <string name="no_inet">Offline mode</string>
    <string name="no_api">Internet connection error</string>


    <!-- days -->
    <string name="events_sunday">Sunday</string>
    <string name="events_monday">Monday</string>
    <string name="events_tuesday">Tuesday</string>
    <string name="events_wednesday">Wednesday</string>
    <string name="events_thursday">Thursday</string>
    <string name="events_friday">Friday</string>
    <string name="events_saturday">Saturday</string>

</resources>