<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a_screen_bkg">


    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionBarColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/eventActionBack"
            android:layout_width="@dimen/width_action_bar_buttons"
            android:layout_height="@dimen/height_action_bar_buttons"
            android:layout_weight="1"
            android:padding="@dimen/left_margin"
            android:src="@drawable/a_back_btn" />


        <ImageView
            android:id="@+id/eventActionHome"
            android:layout_width="@dimen/width_action_bar_buttons"
            android:layout_height="@dimen/height_action_bar_buttons"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:padding="@dimen/left_margin"
            android:src="@drawable/a_home_icon" />

        <TextView
            android:id="@+id/eventActionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eventActionBack"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/eventActionHome"
            android:layout_toRightOf="@+id/eventActionBack"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout4"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/right_margin"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tvgg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/actionBarColor"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sudate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/event_desc_text_size" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/event_desc_text_size" />

                <TextView
                    android:id="@+id/rem1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/event_desc_text_size" />

                <com.golfapp.test.utils.TextViewEx
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/event_desc_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/custpdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_program_icon" />

                    <TextView
                        android:id="@+id/tvCDNewsFb2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView2"
                        android:gravity="center"
                        android:text="@string/events_program_btn"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/custtee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_tee_time_icon" />

                    <TextView
                        android:id="@+id/tvCDtee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView13"
                        android:text="@string/events_tee_times_btn"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/bns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/evt_book_share_title"
                    android:textColor="#404040"
                    android:textSize="22dp" />

                <RelativeLayout
                    android:id="@+id/custaddto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_add_diary_icon" />

                    <TextView
                        android:id="@+id/tvCDNewsFb3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/evt_addtodiary_btn"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView3"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/custtel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_phone_icon" />

                    <TextView
                        android:id="@+id/tvCDNewsFb5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/evt_phone_btn"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView5"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/custemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_mail_icon" />

                    <TextView
                        android:id="@+id/tvCDNewsFb4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView4"
                        android:text="@string/events_email_btn"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/custshare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cust_dialog_button"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/a_share_icon" />

                    <TextView
                        android:id="@+id/tvCDNewsFb1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/imageView1"
                        android:gravity="center"
                        android:text="@string/events_share_btn"
                        android:textColor="#ffffff"
                        android:textSize="18dp" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>